      the old behavior, set the new encoding attribute to the empty string.
      To restore it globally, set $HTML::Element::default_encoding = ''.

    [ENHANCEMENTS]
    * new_from_file & new_from_url now let you set parsing attributes
    * Setting the new self_closed_tags attribute to 1 makes TreeBuilder
      handle XML-style self-closed tags (e.g. <a id="a1" />).

    [DOCUMENTATION]
    * new actually does take optional attributes
      (It has since at least 3.18, although undocumented, and it did
       not previously work with ignore_ignorable_whitespace.)
    * methods & attributes added in version 4.0 or later are now marked

    [TESTS]
    * Add test for self_closed_tags attribute.


5.03     2012-09-22
   Release by Christopher J. Madsen

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * as_HTML no longer indents <textarea> (Tomohiro Hosaka) (RT #70385)

    [FIXES]
    * as_trimmed_text did not accept '0' for extra_chars

    [DOCUMENTATION]
    * Explain that as_text never adds whitespace (RT #66498)
    * Explain what extra_chars can contain for as_trimmed_text.


5.02     2012-06-27
   Release by Christopher J. Madsen

    [TESTS]
    * Do not attempt to check result of $! in construct_tree.t
      (The fix in 5.01 was not successful.)


5.01     2012-06-20
   Release by Christopher J. Madsen

    [TESTS]
    * Force C locale in construct_tree.t (in non-English locales,
      $! will produce messages in a different language) (RT #77823)
    * Add test for preserving whitespace while parsing.


5.00     2012-06-12
   Release by Christopher J. Madsen

   There are only some minor documentation changes since 4.903.
   This is a summary of the most significant changes since 4.2.

    [THINGS THAT MAY BREAK YOUR CODE OR TESTS]
    * Use weak references to avoid memory leaks
      See "Weak References" in HTML::Element for details.
    * new_from_file now dies if the file cannot be opened.  $! records