@@ -12,6 +12,7 @@ Changelog for HTML-Tree
     * new_from_file & new_from_url now let you set parsing attributes
     * Setting the new self_closed_tags attribute to 1 makes TreeBuilder
       handle XML-style self-closed tags (e.g. <a id="a1" />).
+    * New child_nodes method makes for simpler recursion
 
     [DOCUMENTATION]
     * new actually does take optional attributes
